changed pictures fixed footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Hypnosis_Guaranteed_%28204867519%29.jpeg/800px-Hypnosis_Guaranteed_%28204867519%29.jpeg?20180808224722");
+    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
