homework editor changes complete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Header */
+
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -75,6 +78,9 @@ main {
     margin-left: 20px;
 }
 
+
+/* Aside */
+
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -119,6 +125,8 @@ section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
+
+/* footer */
 
 footer {
     padding: 30px;
